RESOLVED FIXED30891
JSC JIT on ARMv7 cannot link jumps >16Mb range
https://bugs.webkit.org/show_bug.cgi?id=30891
Summary JSC JIT on ARMv7 cannot link jumps >16Mb range
Gavin Barraclough
Reported 2009-10-28 17:44:53 PDT
Fix this.
Attachments
The patch (17.36 KB, patch)
2009-10-28 17:53 PDT, Gavin Barraclough
oliver: review+
Gavin Barraclough
Comment 1 2009-10-28 17:53:20 PDT
Created attachment 42072 [details] The patch
Oliver Hunt
Comment 2 2009-10-28 18:24:29 PDT
Comment on attachment 42072 [details] The patch r=me
Gavin Barraclough
Comment 3 2009-10-28 18:40:24 PDT
Sending JavaScriptCore/ChangeLog Sending JavaScriptCore/assembler/ARMv7Assembler.h Sending JavaScriptCore/assembler/MacroAssemblerARMv7.h Sending JavaScriptCore/jit/JIT.h Sending JavaScriptCore/wtf/Platform.h Transmitting file data ..... Committed revision 50255.
Note You need to log in before you can comment on or make changes to this bug.